# faster-pest

./: .gitignore  Cargo.toml  README.md  examples
faster-pest/: Cargo.toml  README.md
faster-pest-derive/: Cargo.toml
faster-pest-derive/src/: expr_codegen.rs  grammar.pest  ids.rs  lib.rs  optimizer.rs  pattern_expr_character.rs  pattern_expr_character_plus.rs  pattern_expr_character_star.rs  pattern_expr_choice.rs  pattern_expr_insens.rs  pattern_expr_neg.rs  pattern_expr_opt.rs  pattern_expr_rep.rs  pattern_expr_rep_character.rs  pattern_expr_seq.rs  pattern_expr_str.rs  pattern_outer.rs  pattern_rule.rs  pattern_rule_method.rs  pattern_rule_silent.rs  tree_inspection.rs
faster-pest-derive/tests/: test.rs  test1.rs  test2.rs
faster-pest-generator/: Cargo.toml
faster-pest-generator/src/: expr_codegen.rs  lib.rs  optimizer.rs
faster-pest/benches/: comparison.rs  csv.rs  json.rs  lightgrep.rs
faster-pest/examples/csv/: README.md  input.csv  main.rs
faster-pest/examples/ini/: README.md  ini.pest  main.rs
faster-pest/examples/json/: grammar.pest  input.json  main.rs
faster-pest/examples/lightgrep/: grammar.pest  input.txt  main.rs
faster-pest/examples/po/: grammar.pest  input.po  main.rs
faster-pest/src/: error.rs  ident.rs  lib.rs  pairs.rs
faster-pest/tests/: test.rs
src/: grammar.pest  lib.rs
tests/: error.rs
