[package]
name = "faster-pest-derive"
authors = ["Mubelotix <mubelotix@gmail>"]
description = "proc-macro for faster-pest"
license = "GPL-3.0-or-later"
repository = "https://github.com/Mubelotix/faster-pest"
version = "0.1.1"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
proc-macro2 = "1.0"
pest_meta = "2.5.2"
