[package]
name = "faster-pest-derive"
authors = ["Mubelotix <mubelotix@gmail.com>"]
description = "proc-macro for faster-pest"
license = "GPL-3.0-or-later"
repository = "https://github.com/Mubelotix/faster-pest"
version = "0.2.0-alpha.1"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
proc-macro2 = "1.0"
faster-pest-generator = { path="../faster-pest-generator" }
