[package]
name = "faster-pest"
authors = ["Mubelotix <mubelotix@gmail>"]
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/Mubelotix/faster-pest"
description = "A generator for high-performance Pest parsers, bringing your grammar to the next level"
version = "0.1.3"
edition = "2021"

[dependencies]
pest = "2.5"
faster-pest-derive = { path="../faster-pest-derive" }

[dev-dependencies]
pest_derive = "2.5"
serde = "1.0"
serde_json = "1.0"
